--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YOU'RE IN AMERICA, SPEAK ENGLISH</title>
+    <title>WHO AM I?</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <div class="title">
         <div class="font">
-            YOU'RE IN AMERICA, <br /> SPEAK ENGLISH
+           WHO AM I?<br>HOW DO I KNOW?
         </div>
         
         <img class="name" src="assets/namestamp3.png">     
