--- a/page-4.html
+++ b/page-4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LANGUAGE SHAME</title>
+    <title>BUT I HAVE REALIZED:</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/gmk4nso.css">
     <script src="script.js"></script>
@@ -11,7 +11,7 @@
     
 <div class = "title2">
     <div class = "font">
-<h1>LANGUAGE SHAME</h1>
+<h1>BUT I HAVE REALIZED:</h1>
     </div>
 </div>
     
