--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
 
         <div class="links">
-            <a href="page-2.html">food shame,</a>
-            <a href="page-3.html">ethnic feature shame,</a>
-            <a href="page-4.html">and language shame.</a>
+            <a href="page-2.html">shame</a>
+            <a href="page-3.html">& guilt,</a>
+            <a href="page-4.html">but I have realized:</a>
 
         </div>
     </div>
