--- a/page-2.html
+++ b/page-2.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FOOD SHAME</title>
+    <title>SHAME</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/gmk4nso.css">
   </head>
     
 <div class = "title3">
     <div class = "font">
-<h1><center>FOOD SHAME</center></h1>
+<h1><center>SHAME</center></h1>
     </div>
 </div>
     
