--- a/page-3.html
+++ b/page-3.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ETHNIC FEATURE SHAME</title>
+    <title>GUILT</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/gmk4nso.css">
   </head>
     
 <div class = "title4">
     <div class = "font">
-<h1>ETHNIC FEATURE SHAME</h1>
+<h1>GUILT</h1>
     </div>
 </div>
     
