--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
     
     <div class="text1">
-        <h2>A phrase both my parents and<br /> grandparents have heard one too many<br /> times. In a country considered the<br /> melting pot of hundreds of culture,<br /> why is assimilation the end goal? The <br />world has asked me to "Americanize"<br /> myself and yet: <br /> <br /></h2>
+        <h2>I am Sam Woo. My parents are<br>from Hong Kong & I am the first<br>generation to be born in the<br>United States. I am queer. I use<br>they/them pronouns. I am creative<br>& quiet. I love music & crochet & my<br>friends. I know all these things<br>about myself & yet<br><br>
+        </h2>
         <div class="emphasis">
-            THE REFUSAL TO <br />HIDE MY CULTURE <br />HAS BECOME MY<br /> GREATEST WEAPON.
+            I DON'T FEEL LIKE I KNOW<br>WHO I AM! I FEEL LIKE A<br>COPY OF EVERYONE ELSE...
         </div>
     </div>
 
@@ -33,8 +34,8 @@
         </div>
 
         <div class="links">
-            <a href="page-2.html">shame</a>
-            <a href="page-3.html">& guilt,</a>
+            <a href="page-2.html">fear</a>
+            <a href="page-3.html">& shame,</a>
             <a href="page-4.html">but I have realized:</a>
 
         </div>
