--- a/page-2.html
+++ b/page-2.html
@@ -45,7 +45,7 @@ height= "70">
     </div>
     
 <div class="text11">
-    <h2>Who would I be if not for you? Who would </h2>
+    <h2>Who would I be if not for you? Who would I be if not for the experiences I've had & the people I've met & the media I've consumed?</h2>
     </div>
     
 <div class= "font">
