--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
     <div class="navig">
         <div class="font2">
-            <h2>It's hard to navigate</h2>
+            <h2>Here is how</h2>
         </div>
 
         <div class="links">
-            <a href="page-2.html">fear</a>
-            <a href="page-3.html">& shame,</a>
-            <a href="page-4.html">but I have realized:</a>
+            <a href="page-2.html">you,</a>
+            <a href="page-3.html">& I see me.</a>
+            <a href="page-4.html">Here's what I learned.</a>
 
         </div>
     </div>
