--- a/page-3.html
+++ b/page-3.html
@@ -50,15 +50,15 @@ height= "70">
     <div class="emphasis">
             WELL, HOW DO I SEE ME?
     </div>
-    <h2>I think of myself as a thoughtful friend. I think of myself as someone my sister looks up to. I think of myself as a creative, someone who has explored many mediums and has found </h2>
+    <h2>Sometimes I think of myself as someone everyone loves to hate. In reality, I find people don't care enough to hate me. I have truly let the opinions of others create a negative perception of myself.</h2>
 </div>
     
 <div class="text12">
     <h2> 
-       My features have been carried through generations. My features come from two strong and resilient families. They have traveled across the sea, to a new country, learned a new language, a new culture. I have my mother's nose, my father's eyebrows, my great-grandma's dimple, my grandfather's height, & my great-aunt's hair. I am a genetic collage of the people who have sacrificed for me, who have loved me.
+       When I think of myself kindly, I think of myself as a thoughtful friend. I think of myself as someone my sister looks up to. I think of myself as a creative, someone who has explored many mediums and enjoyed them all. 
     </h2>
     <div class="emphasis">
-            MY FACE HAS A HISTORY BEHIND IT. HOW COULD I HATE THAT?<br><br>
+        I HAVE LEARNED TO LOVE THIS POSITIVE PERCEPTION OF THE SELF, DESPITE THE LINGERING NEGATIVE PERCEPTION.<br><br>
         </div>
     </div>
 
